Updated flow for factors, updated swagger ui.
