# src/routes/factor-route.js
@@ -1,15 +1,9 @@
 import { Router } from 'express';
 import { factorController } from '../controllers/factor-controller';
 
-const routerOptions = {
-	mergeParams: true
-};
+const router = Router();
 
-const router = Router(routerOptions);
-
-router.post('/', factorController.create);
-router.get('/', factorController.getAllByParent);
-router.get('/:factorId', factorController.getSingleByParent);
+router.get('/', factorController.getAll);
 router.put('/:factorId', factorController.update);
 router.delete('/:factorId', factorController.remove);
 
